[package]
authors = ["Lenscas <lenscas@gmail.com>"]
categories = ["command-line-utilities"]
description = "A cli tool to create online documentation for apis made with tealr"
edition = "2021"
keywords = ["tealr", "teal", "lua", "online-docs", "documentation"]
license = "MIT OR Apache-2.0"
name = "tealr_doc_gen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.54"
clap = "3.0.14"
pulldown-cmark = "0.9.1"
serde = "1.0.136"
serde_json = "1.0.79"
#tealr = {path = "../tealr", features = ["mlua", "mlua_lua54", "mlua_vendored"]}
tealr = {version = "0.8.0", git = "https://github.com/lenscas/tealr", features = ["mlua", "mlua_lua54", "mlua_vendored"]}
#tealr = {version = "0.8.0", git = "https://github.com/lenscas/tealr", features = ["mlua", "mlua_lua54", "mlua_vendored"]}
v_htmlescape = "0.14.1"
